fixed z-index issue, elements going over navbar

--- a/PortfolioFiles/herosection.css
+++ b/PortfolioFiles/herosection.css
@@ -10,6 +10,7 @@
     background:#1a0969;
     position:sticky;
     top:0;
+    z-index:5;
 }
 
 .hero-navbar {
